// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateFilter: Component should render correctly 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Create Filter"
        id="dataSource.view.filter.subTitle"
        values={Object {}}
      />
    }
    headerTitle="name"
  />
  <FilterForm
    createFilter={[Function]}
    dataSourceId="1"
    fieldsInfo={
      Object {
        "field": Object {
          "fieldType": "fieldType",
          "filterType": Array [
            "filterType",
          ],
          "unique": "unique",
        },
      }
    }
    filter={Object {}}
    history={
      Object {
        "push": [Function],
      }
    }
  />
</styled.div>
`;

exports[`CreateFilter: Component should render correctly with loader 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Create Filter"
        id="dataSource.view.filter.subTitle"
        values={Object {}}
      />
    }
    headerTitle="name"
  />
  <Loader />
</styled.div>
`;
